Fixed IE8 style issues in files app
- fixed missing scrollbar in personal page
- fixed controls bar transparency: opaque white in IE8

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -257,6 +257,11 @@ input[type="submit"].enabled {
 	-ms-user-select: none;
 	user-select: none;
 }
+
+.ie8 #controls {
+	background-color: white;
+}
+
 /* position controls for apps with app-navigation */
 #app-navigation+#app-content #controls {
 	left: 250px;
@@ -300,6 +305,10 @@ input[type="submit"].enabled {
 	padding-top: 45px;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
+}
+
+.ie8 #content-wrapper {
+	overflow-y: auto;
 }
 
 #emptycontent {
